<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dip">
        <ImageView
            android:id="@+id/app_icon"
            android:src="@drawable/preview_33"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:contentDescription="@string/appdescription"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/img_text_border"/>
        <TextView
            android:layout_below="@id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/title_text_color"
            android:text="@string/app_name"/>
    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dip">

        <TextView
            android:id="@+id/tv_app_desc"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            style="@style/ContentTextStyle"
            android:text="@string/appdescription"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#33000000"/>
        <TextView
            android:id="@+id/tv_update"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            style="@style/ContentTextStyle"
            android:text="@string/udpate"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#33000000"/>
        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            style="@style/ContentTextStyle"
            android:text="@string/feedback"/>
    </LinearLayout>
</LinearLayout>
